welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant: Boolean){
  if (versLAvant==true){
    for (k<- 0 to nbPas-1){
      avance()
      
    }
  }
  else{
    for (k<- 0 to nbPas-1){
      recule()
  }
  
}